--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tabler/icons": "^2.31.0",
     "@tabler/icons-react": "^2.31.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
