--- a/client/client/package.json
+++ b/client/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tabler/icons": "^2.31.0",
     "@tabler/icons-react": "^2.31.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
